[package]
name = "anput"
version = "0.23.2"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Scriptable Entity-Component-System (powered by Intuicio)"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/anput"
repository = "https://github.com/PsichiX/anput"
documentation = "https://docs.rs/anput"
readme = "../../README.md"

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
deadlock-trace = ["moirai/deadlock-trace"]
trace-changes = []

[dependencies]
moirai = "0.8"
intuicio-data = "0.51"
intuicio-core = "0.51"
intuicio-derive = "0.51"
intuicio-framework-serde = "0.51"
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }

[dev-dependencies]
rand = "0.9"
serde_json = "1"
