[package]
name = "anput-physics"
version = "0.23.0"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Physics plugin for Anput ECS"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/anput"
repository = "https://github.com/PsichiX/anput"
documentation = "https://docs.rs/anput-physics"
readme = "../../README.md"

[dependencies]
anput = { version = "0.23", path = "../_" }
anput-spatial = { version = "0.23", path = "../spatial" }
vek = "0.17"
serde = { version = "1", features = ["derive"] }
